--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,12 @@
 dconfig.ini
 # файл с настройками папки хранения токена
 dsettings.txt
+# не используется
+Settings.py
+# другие файлы
+logfile.json
+test.py
+
 # 1.txt файл для заливки на диск - может использоваться для теста
 
 # .idea/ заигнорена последней строчкой файла. ()
